[package]
name = "embedded_deno"
version = "0.1.0"
authors = ["Emmett Raymond <emmettaraymond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.51.0"
derive_deref = "1.1.0"
tokio = { version = "0.2.22", features = ["full"] }
pin-project = "0.4"
actix-web = "2.0"
actix-files = "0.2.2"
actix-rt = "1.0.0"
log = "0.4.11"
env_logger = "0.7.1"
walkdir = "2"
indicatif = "0.15"
notify = "5.0.0-pre.2"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
