[package]
name = "embedded_deno"
version = "0.1.0"
authors = ["Emmett Raymond <emmettaraymond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.51.0"
derive_deref = "1.1.0"
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3.5"
pin-project = "0.4"
rocksdb = "0.15.0"
http = "0.2.1"
warp = "0.2.5"
hyper = "0.13.7"
log = "0.4.11"
env_logger = "0.7.1"
walkdir = "2"
indicatif = "0.15"
notify = "5.0.0-pre.2"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1.13"
